review: 5. input 검증 메서드 변경 - isBlank() 사용